Prevent wrapping in header nav bar
In the header navigation bar there is automatic scrolling overflow.
Therefore there should be no wrapping
(e.g. in the link "Sun Tzu" in /sun-tzu/template).

--- a/main.css
+++ b/main.css
@@ -382,6 +382,7 @@ nav > ul {
 header > nav > ul {
   flex-wrap: nowrap;
   overflow: auto;
+  white-space: nowrap;
 }
 
 nav > ul > li {
